packages/dartcv/src/gapi/gapi.h

void gapi_GMat_Close(GMatPtr mat);
CvStatus *gapi_GComputation_New(GMat in, GMat out, GComputation *rval);
CvStatus *gapi_GComputation_New_1(GMat in, GScalar out, GComputation *rval);
CvStatus *gapi_GComputation_New_2(GMat in1, GMat in2, GMat out, GComputation *rval);
CvStatus *gapi_GComputation_New_3(GMat in1, GMat in2, GScalar out, GComputation *rval);
void gapi_GComputation_Close(GComputationPtr self);
CvStatus *gapi_GComputation_apply(GComputation self, Mat in,
                                  CvCallback_1 callback /*TODO: GCompileArgs &&args={}*/);
CvStatus *gapi_GComputation_apply_1(GComputation self, Mat in, Scalar *out /*TODO: GCompileArgs &&args={}*/);
CvStatus *gapi_GComputation_apply_2(GComputation self, Mat in1, Mat in2,
                                    Mat *out /*TODO: GCompileArgs &&args={}*/);
CvStatus *gapi_GComputation_apply_3(GComputation self, Mat in1, Mat in2,
                                    Scalar *out /*TODO: GCompileArgs &&args={}*/);
CvStatus *VecPrim_New(VecPrim *rval);
CvStatus *VecPrim_NewFromPointer(Prim *points, int length, VecPrim *rval);
CvStatus *VecPrim_NewFromVec(VecPrim vec, VecPrim *rval);
CvStatus *VecPrim_At(VecPrim vec, int idx, Prim *rval);
CvStatus *VecPrim_Append(VecPrim vec, Prim p);
CvStatus *VecPrim_Size(VecPrim vec, int *rval);
void VecPrim_Close(VecPrimPtr vec);
// Graph API: Converting image from one color space to another
CvStatus *gapi_BayerGR2RGB(const GMat src_gr, GMat *rval);
CvStatus *gapi_BGR2Gray(const GMat src, GMat *rval);
CvStatus *gapi_BGR2I420(const GMat src, GMat *rval);
CvStatus *gapi_BGR2LUV(const GMat src, GMat *rval);
CvStatus *gapi_BGR2RGB(const GMat src, GMat *rval);
CvStatus *gapi_BGR2YUV(const GMat src, GMat *rval);
// Graph API: Image Feature Detection
CvStatus *gapi_Canny(const GMat image, double threshold1, double threshold2, int apertureSize,
                     bool L2gradient, GMat *rval);