packages/dartcv/lib/src/g/gapi.g.dart


  late final _VecPrim_AppendPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(VecPrim, Prim)>>(
      'VecPrim_Append');
  late final _VecPrim_Append = _VecPrim_AppendPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPrim, Prim)>();

  ffi.Pointer<CvStatus> VecPrim_At(
    VecPrim vec,
    int idx,
    ffi.Pointer<Prim> rval,
  ) {
    return _VecPrim_At(
      vec,
      idx,
      rval,
    );
  }

  late final _VecPrim_AtPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPrim, ffi.Int, ffi.Pointer<Prim>)>>('VecPrim_At');
  late final _VecPrim_At = _VecPrim_AtPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPrim, int, ffi.Pointer<Prim>)>();

  void VecPrim_Close(
    VecPrimPtr vec,
  ) {
    return _VecPrim_Close(
      vec,
    );
  }

  late final _VecPrim_ClosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(VecPrimPtr)>>(
          'VecPrim_Close');
  late final _VecPrim_Close =
      _VecPrim_ClosePtr.asFunction<void Function(VecPrimPtr)>();

  ffi.Pointer<CvStatus> VecPrim_New(
    ffi.Pointer<VecPrim> rval,
  ) {
    return _VecPrim_New(
      rval,
    );
  }

  late final _VecPrim_NewPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Pointer<VecPrim>)>>('VecPrim_New');
  late final _VecPrim_New = _VecPrim_NewPtr.asFunction<
      ffi.Pointer<CvStatus> Function(ffi.Pointer<VecPrim>)>();

  ffi.Pointer<CvStatus> VecPrim_NewFromPointer(
    ffi.Pointer<Prim> points,
    int length,
    ffi.Pointer<VecPrim> rval,
  ) {
    return _VecPrim_NewFromPointer(
      points,
      length,
      rval,
    );
  }

  late final _VecPrim_NewFromPointerPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Pointer<Prim>, ffi.Int,
              ffi.Pointer<VecPrim>)>>('VecPrim_NewFromPointer');
  late final _VecPrim_NewFromPointer = _VecPrim_NewFromPointerPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          ffi.Pointer<Prim>, int, ffi.Pointer<VecPrim>)>();

  ffi.Pointer<CvStatus> VecPrim_NewFromVec(
    VecPrim vec,
    ffi.Pointer<VecPrim> rval,
  ) {
    return _VecPrim_NewFromVec(
      vec,
      rval,
    );
  }

  late final _VecPrim_NewFromVecPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPrim, ffi.Pointer<VecPrim>)>>('VecPrim_NewFromVec');
  late final _VecPrim_NewFromVec = _VecPrim_NewFromVecPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPrim, ffi.Pointer<VecPrim>)>();

  ffi.Pointer<CvStatus> VecPrim_Size(
    VecPrim vec,
    ffi.Pointer<ffi.Int> rval,
  ) {
    return _VecPrim_Size(
      vec,
      rval,
    );
  }

  late final _VecPrim_SizePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPrim, ffi.Pointer<ffi.Int>)>>('VecPrim_Size');
  late final _VecPrim_Size = _VecPrim_SizePtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPrim, ffi.Pointer<ffi.Int>)>();

  ffi.Pointer<CvStatus> gapi_BGR2Gray(
    GMat src,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_BGR2Gray(
      src,
      rval,
    );
  }

  late final _gapi_BGR2GrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_BGR2Gray');
  late final _gapi_BGR2Gray = _gapi_BGR2GrayPtr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_BGR2I420(
    GMat src,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_BGR2I420(
      src,
      rval,
    );
  }

  late final _gapi_BGR2I420Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_BGR2I420');
  late final _gapi_BGR2I420 = _gapi_BGR2I420Ptr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_BGR2LUV(
    GMat src,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_BGR2LUV(
      src,
      rval,
    );
  }

  late final _gapi_BGR2LUVPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_BGR2LUV');
  late final _gapi_BGR2LUV = _gapi_BGR2LUVPtr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_BGR2RGB(
    GMat src,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_BGR2RGB(
      src,
      rval,
    );
  }

  late final _gapi_BGR2RGBPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_BGR2RGB');
  late final _gapi_BGR2RGB = _gapi_BGR2RGBPtr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_BGR2YUV(
    GMat src,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_BGR2YUV(
      src,
      rval,
    );
  }

  late final _gapi_BGR2YUVPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_BGR2YUV');
  late final _gapi_BGR2YUV = _gapi_BGR2YUVPtr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_BayerGR2RGB(
    GMat src_gr,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_BayerGR2RGB(
      src_gr,
      rval,
    );
  }

  late final _gapi_BayerGR2RGBPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_BayerGR2RGB');
  late final _gapi_BayerGR2RGB = _gapi_BayerGR2RGBPtr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_Canny(
    GMat image,
    double threshold1,
    double threshold2,
    int apertureSize,
    bool L2gradient,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_Canny(
      image,
      threshold1,
      threshold2,
      apertureSize,
      L2gradient,
      rval,
    );
  }

  late final _gapi_CannyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Double, ffi.Double, ffi.Int,
              ffi.Bool, ffi.Pointer<GMat>)>>('gapi_Canny');
  late final _gapi_Canny = _gapi_CannyPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, double, double, int, bool, ffi.Pointer<GMat>)>();

  void gapi_GComputation_Close(
    GComputationPtr self,
  ) {
    return _gapi_GComputation_Close(
      self,
    );
  }

  late final _gapi_GComputation_ClosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(GComputationPtr)>>(
          'gapi_GComputation_Close');
  late final _gapi_GComputation_Close =
      _gapi_GComputation_ClosePtr.asFunction<void Function(GComputationPtr)>();

  ffi.Pointer<CvStatus> gapi_GComputation_New(
    GMat in$,
    GMat out,
    ffi.Pointer<GComputation> rval,
  ) {
    return _gapi_GComputation_New(
      in$,
      out,
      rval,
    );
  }

  late final _gapi_GComputation_NewPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GMat, ffi.Pointer<GComputation>)>>('gapi_GComputation_New');
  late final _gapi_GComputation_New = _gapi_GComputation_NewPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GComputation>)>();

  ffi.Pointer<CvStatus> gapi_GComputation_New_1(
    GMat in$,
    GScalar out,
    ffi.Pointer<GComputation> rval,
  ) {
    return _gapi_GComputation_New_1(
      in$,
      out,
      rval,
    );
  }

  late final _gapi_GComputation_New_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, GScalar,
              ffi.Pointer<GComputation>)>>('gapi_GComputation_New_1');
  late final _gapi_GComputation_New_1 = _gapi_GComputation_New_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, GScalar, ffi.Pointer<GComputation>)>();

  ffi.Pointer<CvStatus> gapi_GComputation_New_2(
    GMat in1,
    GMat in2,
    GMat out,
    ffi.Pointer<GComputation> rval,
  ) {
    return _gapi_GComputation_New_2(
      in1,
      in2,
      out,
      rval,
    );
  }

  late final _gapi_GComputation_New_2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, GMat, GMat,
              ffi.Pointer<GComputation>)>>('gapi_GComputation_New_2');
  late final _gapi_GComputation_New_2 = _gapi_GComputation_New_2Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, GMat, GMat, ffi.Pointer<GComputation>)>();

  ffi.Pointer<CvStatus> gapi_GComputation_New_3(
    GMat in1,
    GMat in2,
    GScalar out,
    ffi.Pointer<GComputation> rval,
  ) {
    return _gapi_GComputation_New_3(
      in1,
      in2,
      out,
      rval,
    );
  }

  late final _gapi_GComputation_New_3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, GMat, GScalar,
              ffi.Pointer<GComputation>)>>('gapi_GComputation_New_3');
  late final _gapi_GComputation_New_3 = _gapi_GComputation_New_3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, GMat, GScalar, ffi.Pointer<GComputation>)>();

  ffi.Pointer<CvStatus> gapi_GComputation_apply(
    GComputation self,
    Mat in$,
    imp$1.CvCallback_1 callback,
  ) {
    return _gapi_GComputation_apply(
      self,
      in$,
      callback,
    );
  }

  late final _gapi_GComputation_applyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GComputation, Mat,
              imp$1.CvCallback_1)>>('gapi_GComputation_apply');
  late final _gapi_GComputation_apply = _gapi_GComputation_applyPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GComputation, Mat, imp$1.CvCallback_1)>();

  ffi.Pointer<CvStatus> gapi_GComputation_apply_1(
    GComputation self,
    Mat in$,
    ffi.Pointer<Scalar> out,
  ) {
    return _gapi_GComputation_apply_1(
      self,
      in$,
      out,
    );
  }

  late final _gapi_GComputation_apply_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GComputation, Mat,
              ffi.Pointer<Scalar>)>>('gapi_GComputation_apply_1');
  late final _gapi_GComputation_apply_1 =
      _gapi_GComputation_apply_1Ptr.asFunction<
          ffi.Pointer<CvStatus> Function(
              GComputation, Mat, ffi.Pointer<Scalar>)>();

  ffi.Pointer<CvStatus> gapi_GComputation_apply_2(
    GComputation self,
    Mat in1,
    Mat in2,
    ffi.Pointer<Mat> out,
  ) {
    return _gapi_GComputation_apply_2(
      self,
      in1,
      in2,
      out,
    );
  }

  late final _gapi_GComputation_apply_2Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GComputation, Mat, Mat,
              ffi.Pointer<Mat>)>>('gapi_GComputation_apply_2');
  late final _gapi_GComputation_apply_2 =
      _gapi_GComputation_apply_2Ptr.asFunction<
          ffi.Pointer<CvStatus> Function(
              GComputation, Mat, Mat, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> gapi_GComputation_apply_3(
    GComputation self,
    Mat in1,
    Mat in2,
    ffi.Pointer<Scalar> out,
  ) {
    return _gapi_GComputation_apply_3(
      self,
      in1,
      in2,
      out,
    );
  }

  late final _gapi_GComputation_apply_3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GComputation, Mat, Mat,
              ffi.Pointer<Scalar>)>>('gapi_GComputation_apply_3');
  late final _gapi_GComputation_apply_3 =
      _gapi_GComputation_apply_3Ptr.asFunction<
          ffi.Pointer<CvStatus> Function(
              GComputation, Mat, Mat, ffi.Pointer<Scalar>)>();

  void gapi_GMat_Close(
    GMatPtr mat,
  ) {
    return _gapi_GMat_Close(
      mat,
    );
  }

  late final _gapi_GMat_ClosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(GMatPtr)>>(
          'gapi_GMat_Close');
  late final _gapi_GMat_Close =
      _gapi_GMat_ClosePtr.asFunction<void Function(GMatPtr)>();
